@@ -1,3 +1,14 @@
+2010-10-04  Peter Rosin  <peda@lysator.liu.se>
+
+	msvc: handle symbols from different files independently.
+	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS)
+	<dumpbin, lt_cv_sys_global_symbol_pipe>: Make all sections
+	viable for symbol extraction again when the symbols from a new
+	file starts.  Fixes tests/tagdemo-make.test for MSVC 10.
+	* tests/dumpbin-symbols.at: New test, making sure we don't
+	regress.
+	* Makefile.am (TESTSUITE_AT): Update.
+
 2010-09-27  Peter Rosin  <peda@lysator.liu.se>
 
 	tests: check if sys_lib_search_path_spec works on MSVC.
